--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "An online backend service that provides a test REST API for testing and prototyping web applications. It allows developers to make HTTP requests and receive predefined data in JSON format, which simplifies the development and debugging process.",
   "main": "src/index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon src/index.js",
-    "start": "NODE_ENV=production node src/index.js",
+    "dev": "nodemon main",
+    "start": "node main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "compression": "^1.8.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "winston": "^3.17.0",
@@ -28,4 +29,3 @@
     "prisma": "^6.4.1"
   }
 }
-  
